src/gen/DpackParser.java
// Generated from D:/Oscar/Programmation/Kotlin/dpack\Dpack.g4 by ANTLR 4.10.1
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DpackParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, UNLESS=2, ELSE=3, TELLRAW=4, PRINT=5, ENTITY=6, DATA=7, NUM=8, ID=9, 
		STRING=10, SEL=11, COMMAND=12, EQ=13, GTE=14, GT=15, LTE=16, LT=17, INC=18, 
		ADDSET=19, DEC=20, SUBSET=21, MULSET=22, DIVSET=23, MODSET=24, SWAP=25, 
		SET=26, SEP=27, DOT=28, LPAR=29, RPAR=30, LSQ=31, RSQ=32, LCUR=33, RCUR=34, 
		WS=35, LINE_COMMENT=36;
	public static final int
		RULE_program = 0, RULE_function = 1, RULE_block = 2, RULE_statement = 3, 
		RULE_if_ = 4, RULE_else_if = 5, RULE_else_ = 6, RULE_cond = 7, RULE_affect = 8, 
		RULE_opSet = 9, RULE_dataSet = 10, RULE_setData = 11, RULE_entityDataPath = 12, 
		RULE_dataPath = 13, RULE_tellraw = 14, RULE_tellrawPart = 15, RULE_funCall = 16, 
		RULE_incdec = 17, RULE_boolExpr = 18, RULE_valString = 19, RULE_value = 20, 
		RULE_var = 21, RULE_op = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "function", "block", "statement", "if_", "else_if", "else_", 
			"cond", "affect", "opSet", "dataSet", "setData", "entityDataPath", "dataPath", 
			"tellraw", "tellrawPart", "funCall", "incdec", "boolExpr", "valString", 
			"value", "var", "op"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'unless'", "'else'", "'tellraw'", "'print'", "'entity'", 
			"'data'", null, null, null, null, null, "'=='", "'>='", "'>'", "'<='", 
			"'<'", "'++'", "'+='", "'--'", "'-='", "'*='", "'/='", "'%='", "'><'", 
			"'='", "','", "'.'", "'('", "')'", "'['", "']'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "UNLESS", "ELSE", "TELLRAW", "PRINT", "ENTITY", "DATA", "NUM", 
			"ID", "STRING", "SEL", "COMMAND", "EQ", "GTE", "GT", "LTE", "LT", "INC", 
			"ADDSET", "DEC", "SUBSET", "MULSET", "DIVSET", "MODSET", "SWAP", "SET", 
			"SEP", "DOT", "LPAR", "RPAR", "LSQ", "RSQ", "LCUR", "RCUR", "WS", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Dpack.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DpackParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DpackVisitor ) return ((DpackVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(46);
				function();
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(DpackParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DpackParser.ID, i);
		}
		public TerminalNode LPAR() { return getToken(DpackParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(DpackParser.RPAR, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<TerminalNode> SEP() { return getTokens(DpackParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(DpackParser.SEP, i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DpackVisitor ) return ((DpackVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(ID);
			setState(53);
			match(LPAR);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(54);
				match(ID);
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEP) {
					{
					{
					setState(55);
					match(SEP);
					setState(56);
					match(ID);
					}
					}
					setState(61);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(64);
			match(RPAR);
			setState(65);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LCUR() { return getToken(DpackParser.LCUR, 0); }
		public TerminalNode RCUR() { return getToken(DpackParser.RCUR, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DpackVisitor ) return ((DpackVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(LCUR);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << UNLESS) | (1L << TELLRAW) | (1L << PRINT) | (1L << DATA) | (1L << ID) | (1L << SEL) | (1L << COMMAND))) != 0)) {
				{
				{
				setState(68);
				statement();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			match(RCUR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public If_Context if_() {
			return getRuleContext(If_Context.class,0);
		}
		public IncdecContext incdec() {
			return getRuleContext(IncdecContext.class,0);
		}
		public AffectContext affect() {
			return getRuleContext(AffectContext.class,0);
		}
		public DataSetContext dataSet() {
			return getRuleContext(DataSetContext.class,0);
		}
		public SetDataContext setData() {
			return getRuleContext(SetDataContext.class,0);
		}
		public TellrawContext tellraw() {
			return getRuleContext(TellrawContext.class,0);
		}
		public FunCallContext funCall() {
			return getRuleContext(FunCallContext.class,0);
		}
		public TerminalNode COMMAND() { return getToken(DpackParser.COMMAND, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DpackVisitor ) return ((DpackVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				if_();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				incdec();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				affect();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(79);
				dataSet();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(80);
				setData();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(81);
				tellraw();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(82);
				funCall();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(83);
				match(COMMAND);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_Context extends ParserRuleContext {
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<Else_ifContext> else_if() {
			return getRuleContexts(Else_ifContext.class);
		}
		public Else_ifContext else_if(int i) {
			return getRuleContext(Else_ifContext.class,i);
		}
		public Else_Context else_() {
			return getRuleContext(Else_Context.class,0);
		}
		public If_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).enterIf_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).exitIf_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DpackVisitor ) return ((DpackVisitor<? extends T>)visitor).visitIf_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_Context if_() throws RecognitionException {
		If_Context _localctx = new If_Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_if_);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			cond();
			setState(87);
			block();
			setState(91);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(88);
					else_if();
					}
					} 
				}
				setState(93);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(94);
				else_();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Else_ifContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(DpackParser.ELSE, 0); }
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Else_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else_if; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).enterElse_if(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).exitElse_if(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DpackVisitor ) return ((DpackVisitor<? extends T>)visitor).visitElse_if(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Else_ifContext else_if() throws RecognitionException {
		Else_ifContext _localctx = new Else_ifContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_else_if);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(ELSE);
			setState(98);
			cond();
			setState(99);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Else_Context extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(DpackParser.ELSE, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Else_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).enterElse_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).exitElse_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DpackVisitor ) return ((DpackVisitor<? extends T>)visitor).visitElse_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Else_Context else_() throws RecognitionException {
		Else_Context _localctx = new Else_Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_else_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(ELSE);
			setState(102);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(DpackParser.IF, 0); }
		public TerminalNode UNLESS() { return getToken(DpackParser.UNLESS, 0); }
		public TerminalNode ENTITY() { return getToken(DpackParser.ENTITY, 0); }
		public TerminalNode SEL() { return getToken(DpackParser.SEL, 0); }
		public BoolExprContext boolExpr() {
			return getRuleContext(BoolExprContext.class,0);
		}
		public CondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).enterCond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).exitCond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DpackVisitor ) return ((DpackVisitor<? extends T>)visitor).visitCond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondContext cond() throws RecognitionException {
		CondContext _localctx = new CondContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cond);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_la = _input.LA(1);
			if ( !(_la==IF || _la==UNLESS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ENTITY:
				{
				setState(105);
				match(ENTITY);
				setState(106);
				match(SEL);
				}
				break;
			case ID:
			case SEL:
				{
				setState(107);
				boolExpr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AffectContext extends ParserRuleContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public TerminalNode SET() { return getToken(DpackParser.SET, 0); }
		public OpSetContext opSet() {
			return getRuleContext(OpSetContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode COMMAND() { return getToken(DpackParser.COMMAND, 0); }
		public AffectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_affect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).enterAffect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).exitAffect(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DpackVisitor ) return ((DpackVisitor<? extends T>)visitor).visitAffect(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AffectContext affect() throws RecognitionException {
		AffectContext _localctx = new AffectContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_affect);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			var();
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SET:
				{
				setState(111);
				match(SET);
				setState(114);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NUM:
				case ID:
				case SEL:
					{
					setState(112);
					value();
					}
					break;
				case COMMAND:
					{
					setState(113);
					match(COMMAND);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case GT:
			case LT:
			case ADDSET:
			case SUBSET:
			case MULSET:
			case DIVSET:
			case MODSET:
			case SWAP:
				{
				setState(116);
				opSet();
				setState(117);
				value();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpSetContext extends ParserRuleContext {
		public TerminalNode ADDSET() { return getToken(DpackParser.ADDSET, 0); }
		public TerminalNode SUBSET() { return getToken(DpackParser.SUBSET, 0); }
		public TerminalNode MULSET() { return getToken(DpackParser.MULSET, 0); }
		public TerminalNode DIVSET() { return getToken(DpackParser.DIVSET, 0); }
		public TerminalNode MODSET() { return getToken(DpackParser.MODSET, 0); }
		public TerminalNode LT() { return getToken(DpackParser.LT, 0); }
		public TerminalNode GT() { return getToken(DpackParser.GT, 0); }
		public TerminalNode SWAP() { return getToken(DpackParser.SWAP, 0); }
		public OpSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opSet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).enterOpSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).exitOpSet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DpackVisitor ) return ((DpackVisitor<? extends T>)visitor).visitOpSet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OpSetContext opSet() throws RecognitionException {
		OpSetContext _localctx = new OpSetContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_opSet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GT) | (1L << LT) | (1L << ADDSET) | (1L << SUBSET) | (1L << MULSET) | (1L << DIVSET) | (1L << MODSET) | (1L << SWAP))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataSetContext extends ParserRuleContext {
		public List<EntityDataPathContext> entityDataPath() {
			return getRuleContexts(EntityDataPathContext.class);
		}
		public EntityDataPathContext entityDataPath(int i) {
			return getRuleContext(EntityDataPathContext.class,i);
		}
		public TerminalNode SET() { return getToken(DpackParser.SET, 0); }
		public ValStringContext valString() {
			return getRuleContext(ValStringContext.class,0);
		}
		public TerminalNode COMMAND() { return getToken(DpackParser.COMMAND, 0); }
		public DataSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataSet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).enterDataSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).exitDataSet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DpackVisitor ) return ((DpackVisitor<? extends T>)visitor).visitDataSet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataSetContext dataSet() throws RecognitionException {
		DataSetContext _localctx = new DataSetContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_dataSet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			entityDataPath();
			setState(124);
			match(SET);
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUM:
			case ID:
			case STRING:
			case SEL:
				{
				setState(125);
				valString();
				}
				break;
			case DATA:
				{
				setState(126);
				entityDataPath();
				}
				break;
			case COMMAND:
				{
				setState(127);
				match(COMMAND);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetDataContext extends ParserRuleContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public TerminalNode SET() { return getToken(DpackParser.SET, 0); }
		public EntityDataPathContext entityDataPath() {
			return getRuleContext(EntityDataPathContext.class,0);
		}
		public SetDataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setData; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).enterSetData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).exitSetData(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DpackVisitor ) return ((DpackVisitor<? extends T>)visitor).visitSetData(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetDataContext setData() throws RecognitionException {
		SetDataContext _localctx = new SetDataContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_setData);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			var();
			setState(131);
			match(SET);
			setState(132);
			entityDataPath();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntityDataPathContext extends ParserRuleContext {
		public TerminalNode DATA() { return getToken(DpackParser.DATA, 0); }
		public TerminalNode SEL() { return getToken(DpackParser.SEL, 0); }
		public DataPathContext dataPath() {
			return getRuleContext(DataPathContext.class,0);
		}
		public EntityDataPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entityDataPath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).enterEntityDataPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DpackListener ) ((DpackListener)listener).exitEntityDataPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DpackVisitor ) return ((DpackVisitor<? extends T>)visitor).visitEntityDataPath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntityDataPathContext entityDataPath() throws RecognitionException {
		EntityDataPathContext _localctx = new EntityDataPathContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_entityDataPath);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(DATA);
			setState(135);
			match(SEL);
			setState(136);
			dataPath();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
